[package]
name = "vulkano-win"
version = "0.9.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Link between vulkano and winit"
license = "MIT/Apache-2.0"
categories = ["rendering::graphics-api"]

[dependencies]
vulkano = { git = "https://github.com/rukai/vulkano", branch = "fix_cpu_pool_conflict_key" }
winit = { git = "https://github.com/tomaka/winit" }

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = "0.6"
cocoa = "0.13"
objc = "0.2.2"
